simplifying and improving tokenizer

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,5 @@
 {
-"presets":[["env"]], "plugins": ["transform-object-rest-spread"]
+"presets":[["env"]], "plugins": ["transform-object-rest-spread",[ "inline-import", {
+  "extensions": [".txt"]
+}]]
 }
